<resources>
    <string name="app_name">pageIT</string>
    <string name="logo">Logo</string>

    <string name="facebook_app_id">961418331227630</string>
    <string name="fb_login_protocol_scheme">fb961418331227630</string>
    <string name="facebook_client_token">e708f1866aad3113630848f1617e0d61</string>
    <string name="log_in_success">Logged In Successfully !</string>
    <string name="error">Something went wrong !</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="followers">Followers:  %1$s</string>
    <string name="cover_photo">Cover Photo</string>
    <string name="no_pages_found">No Pages Found</string>
    <string name="no_feeds_found">No Feeds Found</string>
    <string name="no_internet">No internet connection</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="something_went_wrong_notification">Oops! something went wrong</string>
    <string name="data_uploaded_notification">Data uploaded successfully.</string>
    <string name="home_screen_welcome">Hi, </string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>

    <string name="log_out">Log out</string>


</resources>