<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.homescreen.HomeScreen">

    <ImageView
        android:id="@+id/iv_settings"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="?actionBarItemBackground"
        android:clickable="true"
        android:contentDescription="@string/settings"
        android:focusable="true"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_baseline_settings_24"
        app:layout_constraintBottom_toBottomOf="@id/cv_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_user_name"
        app:layout_constraintTop_toTopOf="@id/cv_profile"
        app:tint="@color/com_facebook_blue" />

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/home_screen_welcome"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/cv_profile"
        app:layout_constraintEnd_toStartOf="@id/iv_settings"
        app:layout_constraintStart_toEndOf="@id/cv_profile"
        app:layout_constraintTop_toTopOf="@id/cv_profile" />


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/sr_pages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_profile">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_no_pages"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:id="@+id/tv_no_qr_tickets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/no_pages_found"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_pages"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="250dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/sr_pages"
        app:layout_constraintEnd_toStartOf="@id/tv_user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="?actionBarItemBackground"
            android:clickable="false"
            android:contentDescription="@string/profile"
            android:focusable="false"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_round_account_circle_24"
            app:tint="@color/com_facebook_blue" />
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>